--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,7 @@
   /* colors */
   --clr-dark: #101214; /* DarkNeutral100*/
 
+  --clr-neutral350: #38414a; /* DarkNeutral350 */
   --clr-text: #596773; /* DarkNeutral500 */
   --clr-light: #b6c2cf; /* DarkNeutral900 */
   --clr-neutral1000: #c7d1db; /* DarkNeutral1000 */
@@ -20,7 +21,7 @@
   --size-lg: 1.125rem;
   --size-xl: 1.25rem;
   --size-2xl: 1.5rem;
-  --size-3x1: 1.875rem;
+  --size-3xl: 1.875rem;
   --size-4x1: 2.25rem;
   --size-5x1: 3rem;
   --size-6x1: 3.75rem;
