Add hero section

--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@
   --clr-dark: #101214; /* DarkNeutral100*/
 
   --clr-neutral350: #38414a; /* DarkNeutral350 */
+  --clr-neutral400: #454f59; /* DarkNeutral400 */
   --clr-text: #596773; /* DarkNeutral500 */
   --clr-light: #e2e8f0; /* slate200 */
   --clr-muted: #b6c2cf; /* DarkNeutral900 */
