Add title util class

--- a/styles/utils.css
+++ b/styles/utils.css
@@ -46,6 +46,14 @@ btn:focus-visible {
   margin-top: 5rem;
 }
 
+.title {
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  font-family: var(--font-secondary);
+  color: var(--clr-text);
+  font-size: var(--size-xs);
+}
+
 /* xs */
 @media (min-width: 475px) {
   .container {
@@ -57,6 +65,10 @@ btn:focus-visible {
 @media (min-width: 640px) {
   .container {
     max-width: 640px;
+  }
+
+  .title {
+    font-size: var(--size-sm);
   }
 }
 
@@ -75,6 +87,10 @@ btn:focus-visible {
 
   .section {
     margin-top: 10rem;
+  }
+
+  .title {
+    font-size: var(--size-lg);
   }
 }
 
